WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97563
GIFImageReader: fix tautological compare
https://bugs.webkit.org/show_bug.cgi?id=97563
Summary
GIFImageReader: fix tautological compare
Hans Wennborg
Reported
2012-09-25 06:28:34 PDT
GIFImageReader: fix tautological compare
Attachments
Patch
(2.32 KB, patch)
2012-09-25 06:33 PDT
,
Hans Wennborg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hans Wennborg
Comment 1
2012-09-25 06:33:09 PDT
Created
attachment 165601
[details]
Patch
Hans Wennborg
Comment 2
2012-09-25 06:35:08 PDT
Adam: you had the pleasure of touching this file in
Bug 52363
, perhaps you can take a look?
WebKit Review Bot
Comment 3
2012-09-25 06:35:31 PDT
Attachment 165601
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/image-decoders/gif/GIFImageReader.cpp:659: disposal_method is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Hans Wennborg
Comment 4
2012-09-25 06:38:11 PDT
(In reply to
comment #3
)
>
Attachment 165601
[details]
did not pass style-queue: > > Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 > Source/WebCore/platform/image-decoders/gif/GIFImageReader.cpp:659: disposal_method is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] > Total errors found: 1 in 2 files > > > If any of these errors are false positives, please file a bug against check-webkit-style.
The style is consistent with the rest of the file.
Adam Barth
Comment 5
2012-09-25 09:26:47 PDT
Comment on
attachment 165601
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=165601&action=review
> Source/WebCore/ChangeLog:15 > + This patch fixes the code by doing the comparison before storing the > + value in the enum.
Is there any observable consequence of this change? If so, should we write a test?
Adam Barth
Comment 6
2012-09-25 09:27:19 PDT
That file is also massively out of style, but I agree that point-fixing this one issue isn't the right thing to do in this patch.
Hans Wennborg
Comment 7
2012-09-25 09:44:00 PDT
(In reply to
comment #5
)
> (From update of
attachment 165601
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=165601&action=review
> > > Source/WebCore/ChangeLog:15 > > + This patch fixes the code by doing the comparison before storing the > > + value in the enum. > > Is there any observable consequence of this change? If so, should we write a test?
There's no observable difference. The code currently relied on unspecified behavior (i.e. that the enum can represent more values than it strictly has to), and my change just fixes that.
Adam Barth
Comment 8
2012-09-25 09:47:17 PDT
Comment on
attachment 165601
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=165601&action=review
>>> Source/WebCore/ChangeLog:15 >>> + value in the enum. >> >> Is there any observable consequence of this change? If so, should we write a test? > > There's no observable difference. > > The code currently relied on unspecified behavior (i.e. that the enum can represent more values than it strictly has to), and my change just fixes that.
Ah, I see. We have storage for all the bits, they're just outside the enum range. Makes sense.
WebKit Review Bot
Comment 9
2012-09-25 10:11:45 PDT
Comment on
attachment 165601
[details]
Patch Clearing flags on attachment: 165601 Committed
r129523
: <
http://trac.webkit.org/changeset/129523
>
WebKit Review Bot
Comment 10
2012-09-25 10:11:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug