GIFImageReader: fix tautological compare https://bugs.webkit.org/show_bug.cgi?id=97563

Reviewed by Adam Barth.

The frame_reader->disposal_method field is of type
ImageFrame::FrameDisposalMethod, which has a range of 0--3. Therefore,
recent versions of Clang concludes that the expression
frame_reader->disposal_method == 4
will never be true, and warns about it.

This patch fixes the code by doing the comparison before storing the
value in the enum.

No new functionality, no new tests.

* platform/image-decoders/gif/GIFImageReader.cpp:
(GIFImageReader::read):


Canonical link: https://commits.webkit.org/115541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129523 268f45cc-cd09-0410-ab3c-d52691b4dbfc